salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/DentShift_Diagnosis__c.object-meta.xml
<CustomObject>
    <label>DENT SHIFT診断</label>
    <pluralLabel>DENT SHIFT診断</pluralLabel>
    <description>DENT SHIFT連携で作成・更新するレコード(外部IDでupsert)。</description>
    <nameField>
        <label>診断名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>