salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_AI_Exposure__c.field-meta.xml
<CustomField>
    <fullName>DentShift_AI_Exposure__c</fullName>
    <label>AI露出状況の要約</label>
    <description>AI露出状況の要約</description>
    <inlineHelpText>AI露出状況の要約</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>