salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Diagnosis_Id__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Diagnosis_Id__c</fullName>
    <label>DENT SHIFTの診断ID</label>
    <description>DENT SHIFTの診断ID(外部ID・一意)</description>
    <inlineHelpText>DENT SHIFTの診断ID(外部ID・一意)</inlineHelpText>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>