salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Improvement_Summary__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Improvement_Summary__c</fullName>
    <label>改善提案の概要</label>
    <description>改善提案の概要(上位3件)</description>
    <inlineHelpText>改善提案の概要(上位3件)</inlineHelpText>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>