salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Measured_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Measured_At__c</fullName>
    <label>診断完了日時</label>
    <description>診断完了日時</description>
    <inlineHelpText>診断完了日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>