salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Provisional__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Provisional__c</fullName>
    <label>暫定値</label>
    <description>暫定値(サンプル/計測不能を含む)</description>
    <inlineHelpText>暫定値(サンプル/計測不能を含む)</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>