salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Result_Url__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Result_Url__c</fullName>
    <label>診断結果ページ</label>
    <description>診断結果ページ</description>
    <inlineHelpText>診断結果ページ</inlineHelpText>
    <type>Url</type>
</CustomField>