salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Target_Url__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Target_Url__c</fullName>
    <label>診断対象URL</label>
    <description>診断対象URL</description>
    <inlineHelpText>診断対象URL</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>