salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Total_Score__c</fullName>
    <label>総合スコア</label>
    <description>総合スコア</description>
    <inlineHelpText>総合スコア</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>