salesforce/force-app/main/default/objects/DentShift_Diagnosis__c/fields/DentShift_Total_Status__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Total_Status__c</fullName>
    <label>総合判定</label>
    <description>総合判定</description>
    <inlineHelpText>総合判定</inlineHelpText>
    <type>Text</type>
    <length>40</length>
</CustomField>